Fix footer grid alignment

--- a/src/components/Footer/scss/index.scss
+++ b/src/components/Footer/scss/index.scss
@@ -5,17 +5,19 @@
   padding: $spacer * 3 0 $spacer * 2;
 
   .container {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
     justify-content: center;
 
-    @media (min-width: 700px) {
-      width: 50%;
-      justify-content: space-between;
+    & > div {
+      padding: $spacer;
     }
 
-    div:not(:last-of-type) {
-      padding-right: $spacer * 5;
+    @media (min-width: 600px) {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    @media (min-width: 920px) {
+      max-width: 70%;
     }
   }
 
@@ -24,10 +26,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-    @media (max-width: 700px) {
-      padding: 0 $spacer * 5;
-    }
   }
 
   &__favicons {
@@ -63,12 +61,21 @@
     }
 
     &-payments {
-      border-top: 2px solid $gray-dark;
-      padding-top: $spacer;
-      margin-top: $spacer;
-
       p {
+        position: relative;
         font-weight: $bold-font-weight;
+        margin-top: 10px;
+        padding-top: 10px;
+
+        &::before {
+          content: "";
+          background: rgb(87, 87, 87);
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 2px;
+          width: 50%;
+        }
       }
     }
   }
